# tax-calc

./: .gitignore  CMakeLists.txt  LOGGER_USAGE.md  README.md
gui/: createdialog.cpp  createdialog.hpp  createdialog.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  transactiontable.hpp
inc/: asset.hpp  asset_manager.hpp  assetmanager.hpp  calculator.hpp  logger.hpp  transaction.hpp  transactionmanager.hpp
inc/database/: assetdatabase.hpp  transactiondatabase.hpp
inc/network/: evdsfetcher.h  evdsfetcher.hpp  getrequest.h  getrequest.hpp  httpmanager.h  httpmanager.hpp  networkcore.h  networkcore.hpp  yahoofinancefetcher.hpp
src/: assetmanager.cpp  logger.cpp  main.cpp  transactionmanager.cpp
src/database/: assetdatabase.cpp  transactiondatabase.cpp
src/network/: evdsfetcher.cpp  getrequest.cpp  networkcore.cpp  yahoofinancefetcher.cpp
